Mon Dec 13 20:12:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/replacements/readpassphrase.c(added):
	* src/replacements/readpassphrase.h(added):
	- replacements for readpassphrase
	* configure.in include/replacements.h src/apps/tsql.c:
	- use readpassphrase instead of getpass

Mon Dec 13 14:20:14 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: merged with trunk 0.63
	* include/tds.h src/tds/util.c:
	- improve logging (not finished)

Mon Dec 13 11:57:44 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 autogen.sh configure.in misc/test-dist.sh:
	* src/apps/Makefile.am src/ctlib/Makefile.am:
	* src/dblib/Makefile.am src/odbc/Makefile.am:
	* src/server/Makefile.am src/tds/Makefile.am:
	- imported changes from 0.63 trunk

Sun Dec 12 10:07:06 EST 2004	Brian Bruns <brian@bruns.com>
	* src/pool/main.c: setsockopt to SO_REUSEADDR
	* src/pool/member.c: use netlib final packet flag instead of done token.
	* src/pool/user.c: reallocate dead users

Sat Dec 11 14:32:31 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/pool/main.c src/pool/member.c src/pool/pool.h:
	* src/pool/user.c:
	- update style

Sat Dec 11 14:26:47 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c: use current_results, not res_info
	* src/dblib/unittests/rpc.c: backported improved test

Fri Dec 10 14:59:47 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/tds/convert.c
	- apply patch, modified, from Bill Thompson cf. ML today.

Thu Dec 09 11:17:27 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: cleanup, reuse tds_set_state

Thu Dec 09 11:15:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/insert_speed.c(added):
	- add a new test from ML

Thu Dec 09 10:05:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c:
	- fix a possible leak and memory very low
	- avoid memcpy(x,x,-1)