@@ -1,3 +1,11 @@
+Mon Dec 13 20:21:32 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
+	* src/pool/config.c src/pool/member.c src/pool/pool.h:
+	* src/pool/stream.c src/pool/user.c:
+	- update comment style
+	- small fixes
+	* src/tds/convert.c:
+	- give compile one more change to optimize
+
 Mon Dec 13 20:12:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
 	* src/replacements/readpassphrase.c(added):
 	* src/replacements/readpassphrase.h(added):
